examples/typechecking/impl.an

trait Foo a =
    foo: fn a a -> a

implicit foo_i32: Foo I32 =
    Foo fn _a b -> b

implicit foo_f64: Foo F64 =
    Foo fn _a b -> b


a = foo 1 2i32
b = foo 1.0 2.0
c = foo "one" "two"

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// type Foo a =
//     foo: fn a a [Ptr Unit] -> a
// 
// implicit (foo_i32: Foo I32) =
//     (Foo: fn (fn I32 I32 [Ptr Unit] -> I32) -> Foo I32 pure) (fn (_a: I32) (b: I32) -> (b: I32))
// 
// implicit (foo_f64: Foo F64) =
//     (Foo: fn (fn F64 F64 [Ptr Unit] -> F64) -> Foo F64 pure) (fn (_a: F64) (b: F64) -> (b: F64))
// 
// (a: I32) = (foo: fn I32 I32 {Foo I32} [Ptr Unit] -> I32 pure) 1 2_I32 {(foo_i32: Foo I32)}
// 
// (b: F64) = (foo: fn F64 F64 {Foo F64} [Ptr Unit] -> F64 pure) 1.0 2.0 {(foo_f64: Foo F64)}
// 
// (c: String) = (foo: fn String String {Foo String} [Ptr Unit] -> String pure) "one" "two" {(error)}

// expected stderr:
// examples/typechecking/impl.an:14:5
// 13 | b = foo 1.0 2.0
// 14 | c = foo "one" "two"	// error: No implicit found for type Foo String required by foo
//    |     ^^^
// 
// Found 1 error and 0 warnings

